fix(ui): collapse closed card content

--- a/apps/duskmoon_storybook/assets/css/app.css
+++ b/apps/duskmoon_storybook/assets/css/app.css
@@ -15,6 +15,11 @@
 @import "../../../phoenix_duskmoon/assets/css/element-theme-bridge.css";
 
 @layer components {
+  /* WORKAROUND(upstream): duskmoon-dev/duskmoonui#43 */
+  .collapse-card:not(.collapse-open):not(.show) .collapse-content > * {
+    padding-block-end: 0;
+  }
+
   .rainbow {
     z-index: -1;
     width: 100vw;
